Fix nav border on mobile

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -241,7 +241,6 @@ body.splash-transition
       text-indent: -999px
       width: 25%
     .links
-      border-bottom: 1px solid cabin_grey_light
       display: table
       table-layout: fixed
       width: 100%
